syntax = "proto3";

package http;

option go_package = "/";

message Context {
  Request Request = 1;
  Response Response = 2;
}

message Request {
  map<string, StringList> Headers = 1;
  string URI = 2;
  string Method = 3;
  int64 ContentLength = 4;
  string Protocol = 5;
  string IP = 6;
  bytes Body = 7;
}

message Response {
  map<string, StringList> Headers = 1;
  int32 StatusCode = 2;
  bytes Body = 3;
}

message StringList {
  repeated string Value = 1;
}